add without nonce styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="px-3">
   <h1>Add nonces to inline CSS</h1>
-  <div class="nginx mb-5">replaced by nginx: random-csp-nonce</div>
 
   <div class="mb-5">
     <h2>NGX Bootstrap</h2>
@@ -13,6 +12,10 @@
   <div>
     <h2>Material</h2>
     <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+  </div>
+
+  <div class="without-nonce">
+    <h2>This div shouldn't color red...</h2>
   </div>
 </div>
 
